--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ authors = ["kenya-sk"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 hydra-core = "^1.1.1"
+numpy = "^1.21.5"
+opencv-python = "^4.5.4"
 
 [tool.poetry.dev-dependencies]
 
