--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.8,<3.11"
 hydra-core = "^1.1.1"
 numpy = "^1.21.5"
 opencv-python = "^4.5.4"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 
